--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,7 @@
-<div class="col-lg-offset-6col-lg-6">
-  <ul>
-    <li *ngFor="let item of list">
-      <app-list-item [item]="item"></app-list-item>
-    </li>
-  </ul>
+<div class="col-lg-offset-6 col-lg-6">
+  <h3>| Awesome list of Quotes</h3>
+    <ul>
+      <li *ngFor="let item of list">
+        <app-list-item [item]="item"></app-list-item>
+      </li>
+    </ul>
