retrieve item data from parent component and render individual items via the list-item component. Add item styling

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,3 +1,8 @@
-<p>
-  list-item works!
-</p>
+  <div class="item">
+    <hr>
+      <span class="label label-primary">{{item.id}}</span>
+      <span class="label label-warning">{{item.author}}</span>
+      <br>
+      <p>"{{item.quote}}"</p>      
+  </div>
+
