--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,7 +1,8 @@
-<div class="col-lg-offset-6 col-lg-6">
+<div class="col-lg-offset-4 col-lg-8">
   <h3>| Awesome list of Quotes</h3>
     <ul>
       <li *ngFor="let item of list">
         <app-list-item [item]="item"></app-list-item>
       </li>
     </ul>
+</div>
