add even emitter to component class to catch and emit any item-delete events

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -2,6 +2,7 @@
     <hr>
       <span class="label label-primary">{{item.id}}</span>
       <span class="label label-warning">{{item.author}}</span>
+      <a href="#" class="btn btn-danger" (click)="deleteItem()">delete</a>
       <br>
       <p>"{{item.quote}}"</p>      
   </div>
